feat: add advertisement

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <a href="#"><i class="fa-brands fa-facebook"></i><span class="hidden-tablet"> facebook</span></a>
             <a href="#"><i class="fa-brands fa-facebook"></i><span class="hidden-tablet"> facebook</span></a>
         </section>
+        <section class="hidden-mobile">
+            <img class="img-fluid" src="img/banner.png" alt="ad">
+        </section>
     </main>
     <footer>
     </footer>
