feat: fix ad spacing

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
             <a href="#"><i class="fa-brands fa-facebook"></i><span class="hidden-tablet"> facebook</span></a>
         </section>
         <section class="hidden-mobile">
-            <img class="img-fluid" src="img/banner.png" alt="ad">
+            <img class="img-fluid ad" src="img/banner.png" alt="ad">
+        </section>
+        <h5>Presentation</h5>
+        <section>
+
         </section>
     </main>
     <footer>
