--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <h3>Tiramisù <span class="hidden-mobile">(Dolce Tradizionale)</span></h3>
         <section class="overview">
             <div class="row">
-                <div class="col col-youtube">
+                <div class="col-youtube">
                     <img class="img-fluid" src="img/image (10).png" alt="youtube">
                 </div>
-                <div class="col col-overview">
+                <div class="col-overview">
                     <h4>In breve</h4>
                     <ul>
                         <li>Difficoltà: <span class="overview-bold">Facile</span></li>
@@ -49,8 +49,16 @@
             <img class="img-fluid ad" src="img/banner.png" alt="ad">
         </section>
         <h5>Presentation</h5>
+        <hr>
         <section>
-
+            <div class="row">
+                <div class="col-img">
+                    <img class="img-tiramisu" src="img/tiramisu.jpg" alt="tiramisu">
+                </div>
+                <div class="col-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+            </div>
         </section>
     </main>
     <footer>
