feat: add footer

--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
         </section>
     </main>
     <footer>
+        <section class="footer-1">
+            <div><strong>&copy 2021 Giallo Booleano S.p.a.</strong></div>
+            <div>Via Tal dei tali, 10 - 88046 Lamezia terme - VAT 43940293020</div>
+        </section>
+        <section class="footer-2">
+            <nav>
+                <ul>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">About us</a></li>
+                </ul>
+            </nav>
+        </section>
     </footer>
 </body>
 </html>
